# cyber-detector

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dashboard.css  Dashboard.jsx  app.py  kafka_consumer.py  model_adapter.py  model_loader.py  model_loadry.py  swagger.css  validate_deployment.py
backend/security/: middleware.py  sanitizer.py
backend/services/: preprocessing.py
dashboard/: app.py  utils.py
dashboard/components/: threat_cchart.py
dashboard/pages/: 1_Overview.py
devops/: Makefile  docker-compose.yml  prometheus.ml
devops/dockerfile/: Dockerfile.backend  Dockerfile.dashboard  dockerfile.ml
devops/nginx/: nginx.conf
ml/: readme  registry.py  retrain.py
ml/configs/: mlflow.yml
ml/monitoring/: drift.py  performance.py
ml/optimization/: optimize.py
ml/privacy/: pii_scrubber.py
ml/security/: adversarial_test.py  adversarial_testing.py
ml/training/: data_exploration.py  data_splitting.py  evaluate_model.py  feature_engineering.py  model_packager.py  train_model.py  tune_model.py
ml/utils/: config.py  security.py
tests/: test_preprocessing.py
tests/unit/: test_data_validation.py
