[project]
name = "cyber-detector"
version = "1.0.0"
description = "ML pipeline for cyber threat detection"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "mlflow>=2.3.0"
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
python_version = "3.10"

