[project]
name = "cyber-detector"
version = "1.0.0"
description = "ML pipeline for cyber threat detection"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "mlflow>=2.3.0"
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
python_version = "3.10"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
    --cov=ml 
    --cov-report=html
    --cov-report=term-missing
    --durations=10
"""
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.ruff]
select = [
    "E",   # Pycodestyle errors
    "F",   # Pyflakes
    "B",   # Bugbear
    "I",   # Isort
    "N",   # PEP8 naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
]
ignore = ["D203"]  # Allow 1 blank line before class docstring
line-length = 100
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/*" = ["S101"]      # Allow assert in tests