[project]
name = "cyber-detector"
version = "1.0.0"
description = "Machine learning pipeline for network threat detection"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Security Teams",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "mlflow>=2.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
python_version = "3.10"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
    --cov=ml 
    --cov-report=html
    --cov-report=term-missing
    --durations=10
"""
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.ruff]
select = ["E", "F", "B", "I", "N", "D", "UP"]
ignore = ["D203"]
line-length = 100
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]